Fixed text alignment styling with flexbox

--- a/packages/core/src/editor.module.css
+++ b/packages/core/src/editor.module.css
@@ -37,7 +37,6 @@ Tippy popups that are appended to document.body directly
 .defaultStyles h2,
 .defaultStyles h3,
 .defaultStyles li {
-  all: unset !important;
   margin: 0;
   padding: 0;
   font-size: inherit;
